fix gap between step 2 and 3 when resized to smaller resolution

--- a/demo/css/app-styles.css
+++ b/demo/css/app-styles.css
@@ -2779,7 +2779,7 @@ margin-left: -4px;
 }
 
 #step2 {
-	width:33%;
+	width:34%;
 }
 
 #step4 {
@@ -2799,7 +2799,7 @@ margin-left: -4px;
 }
 
 #step2 {
-	width:33%;
+	width:34%;
 }
 
 #step4 {
